# ranvier-fullstack-reference

./: .dockerignore  .env.example  .gitattributes  .gitignore  CANDIDATE_REGISTRY.md  README.md
backend/: Cargo.toml  ranvier.toml
backend/src/: domain.rs  http_contract.rs  hybrid.rs  lib.rs  main.rs  native.rs  startup.rs  store.rs
backend/src/models/: note.rs
backend/tests/: hybrid_parity.rs  native_scenarios.rs
candidate-registry/: MANIFEST.json
candidate-registry/crates/ranvier-audit/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-compliance/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-core/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-guard/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-http/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-inspector/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-macros/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-openapi/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-runtime/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-std/0.51.0-m420.1/: download
candidate-registry/crates/ranvier-test/0.51.0-m420.1/: download
candidate-registry/crates/ranvier/0.51.0-m420.1/: download
candidate-registry/index/: config.json
candidate-registry/index/ra/nv/: ranvier  ranvier-audit  ranvier-compliance  ranvier-core  ranvier-guard  ranvier-http  ranvier-inspector  ranvier-macros  ranvier-openapi  ranvier-runtime  ranvier-std  ranvier-test
consumer-smoke/: Cargo.toml
consumer-smoke/.cargo/: config.toml
consumer-smoke/src/: lib.rs  main.rs
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docker/compose/: compose.dev.yml  compose.prod.yml
evidence/: hybrid-live-scenarios.json  hybrid-order-authorization-schematic.json  m420-rq6-maintainer-comparison.json  native-hybrid-live-parity.json  native-hybrid-schematic-parity.json  native-live-scenarios.json  native-order-authorization-schematic.json  native-rq5-live-scenarios.json  native-rq5-order-authorization-schematic.json  plain-axum-control-live-scenarios.json  ranvier-plain-axum-live-parity.json
frontend/: Dockerfile  index.html  nginx.conf
plain-axum-control/: Cargo.toml  Containerfile  README.md
plain-axum-control/src/: domain.rs  http.rs  lib.rs  main.rs  store.rs
plain-axum-control/tests/: control_scenarios.rs
scripts/: build-all.ps1  build-all.sh  build-candidate-registry.mjs  candidate-cargo.mjs  compare-adapter-live-evidence.mjs  compare-adapter-schematics.mjs  compare-rq6-control.mjs  deploy-local.ps1  deploy-local.sh  measure-rq6-comparison.mjs  run-fresh-consumer-gate.mjs  run-live-scenario-gate.mjs  run-local-source.mjs  serve-candidate-registry.mjs  serve-reference-ui.mjs  setup-db.ps1  setup-db.sh  verify-independent-clone.mjs
