[package]
name = "ranvier-fullstack-backend"
version = "0.43.0"
edition = "2024"

[dependencies]
# Ranvier v0.43 (local path deps for workspace parity)
ranvier-core    = { path = "../../ranvier/core" }
ranvier-runtime = { path = "../../ranvier/runtime" }
ranvier-http    = { path = "../../ranvier/http" }
ranvier-macros  = { path = "../../ranvier/macros" }
ranvier-guard   = { path = "../../ranvier/guard" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Async & Utilities
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
