[package]
name = "ranvier-fullstack-backend"
version = "0.51.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
# Exact M419-inclusive candidate packages. The committed local sparse registry
# is the default source until a byte-equivalent public prerelease is approved.
ranvier-core    = { version = "=0.51.0-m420.1", registry = "ranvier-m420" }
ranvier-runtime = { version = "=0.51.0-m420.1", registry = "ranvier-m420" }
ranvier-http    = { version = "=0.51.0-m420.1", registry = "ranvier-m420" }
ranvier-macros  = { version = "=0.51.0-m420.1", registry = "ranvier-m420" }
ranvier-guard   = { version = "=0.51.0-m420.1", registry = "ranvier-m420" }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "derive"] }

# Async & Utilities
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
