[package]
name = "plain-axum-order-authorization"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false

[dependencies]
async-trait = "0.1"
axum = "=0.8.9"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "=0.5.3", features = ["limit", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
